--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">OnefootballCodingChallenge</string>
+    <string name="generic_error">Error ocurred</string>
 </resources>
